fix: media has margin below on mobile

--- a/src/_spacing.scss
+++ b/src/_spacing.scss
@@ -86,6 +86,7 @@ $space-directions: (
   }
 }
 
+.mb-none > .article-media-thumbnail,
 .mb-none > p {
   margin-bottom: 0 !important;
 }
